# shellhunter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scanner/: analyzer.py  heuristic.py  main.py  models.py  reporter.py  signature.py  utils.py
test_samples/: clean_file.php  obfuscated.php  reverse_shell.sh  webshell_basic.php
